# fastapi_book

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 86dec6e54dc6_init.py
src/: schemas.py
src/database/: auth.py  db.py  models.py
src/models/: base.py
src/repo/: adress_book.py  todos.py  user.py
src/repository/: adress_book.py
src/routes/: adress_book.py  todo_items.py  users.py
src/schemas/: schemas.py
src/services/: todo.py  users.py
